--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h1>Welcome to My HTML</h1>
 
-    <p>This is a simple HTML example for beginners.</p>
+    <p>This is a simple HTML .</p>
 
     <div class="box">
         <h3>About</h3>
